# halo

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE.md  README.md  ROADMAP.md  TODO.md  color.go  config.go  config.json  config.template.json  go.mod  go.sum  helpers.go  light.rs  logger.go  love_sensation.go  main.go  patch.go  rustfmt.toml  scene.go  start-capture.sh  start.sh
.github/: dependabot.yml
.github/workflows/: rust.yml
carabiner/: TODO.md
config/: config.go  patch.go  profiles.go
crates/core/: Cargo.toml
crates/core/src/: ableton_link.rs  async_console.rs  config.rs  console.rs  cue.rs  cue_master.rs  lib.rs  messages.rs  programmer.rs  tracking_state.rs
crates/core/src/artnet/: artnet.rs  mod.rs  network_config.rs
crates/core/src/audio/: audio_player.rs  device_enumerator.rs  mod.rs  waveform.rs
crates/core/src/cue/: cue.rs  cue_manager.rs  cue_resolver.rs  mod.rs
crates/core/src/effect/: effect.rs  mod.rs
crates/core/src/midi/: midi.rs
crates/core/src/modules/: audio_module.rs  dmx_module.rs  midi_module.rs  mod.rs  module_manager.rs  smpte_module.rs  traits.rs
crates/core/src/pixel/: mod.rs  pixel_effects.rs  pixel_engine.rs
crates/core/src/preset/: preset.rs  preset_library.rs
crates/core/src/rhythm/: rhythm.rs
crates/core/src/show/: mod.rs  show.rs  show_manager.rs
crates/core/src/timecode/: mod.rs  timecode.rs  timecode_manager.rs
crates/dj/: Cargo.toml  build.rs
crates/dj/examples/: analyze_track.rs  beat_events.rs  multichannel_test.rs  play_audio.rs
crates/dj/src/: lib.rs
crates/dj/src/deck/: mod.rs
crates/dj/src/midi/: mod.rs  z1_mapping.rs
crates/dj/src/module/: audio_engine.rs  deck_player.rs  mod.rs  time_stretcher.rs
crates/dj/tests/: bpm_accuracy_test.rs
crates/dj/tests/fixtures/: .gitignore  README.md  ground_truth.json
crates/dj/tests/fixtures/audio/: .gitkeep
crates/fixtures/: Cargo.toml
crates/fixtures/src/: fixture_library.rs  lib.rs
crates/halo/: Cargo.toml
crates/halo/src/: main.rs  mod.rs
crates/push2/: Cargo.toml
crates/push2/src/: lib.rs  module.rs
crates/push2/src/display/: driver.rs  frame_buffer.rs  mod.rs  renderer.rs  waveform.rs
crates/push2/src/midi/: led_feedback.rs  mapping.rs  mod.rs
crates/ui/: Cargo.toml
crates/ui/src/: console_adapter.rs  cue.rs  cue_editor.rs  fader.rs  fixture.rs  fixture_grid.rs  footer.rs  header.rs  lib.rs  master.rs  patch_panel.rs  programmer.rs  session.rs  settings.rs  show_panel.rs  state.rs  timeline.rs  transport.rs  utils.rs  visualizer.rs
crates/ui/src/dj/: deck.rs  library.rs  mod.rs  waveform_texture.rs
crates/ui/src/utils/: icon.rs  mod.rs
cuelist/: cue.go  cue_list.go  master.go
docs/: README.md  architecture.md  cli-reference.md  examples.md  multi-destination-artnet.md  presets.md  troubleshooting.md
effect/: effect.go
engine/scale/: scale.go
exp/: ledtest.sh
exp/light-ui-demo/: Cargo.toml
exp/light-ui-demo/src/: main.rs
fixture/: channel.go  dmx_writer.go  fixture.go  fixture_channel.go  fixture_group.go  fixture_test.go  group.go  group_test.go  profile.go
fxtest/: main.go
legacy/: .gitignore  TODO.md  audio.go  go.sum  helpers.go  main.go  show.go
legacy/config/: config.go
legacy/cuelist/: cue_list.go  cue_test.go
legacy/dmx/: universe.go
legacy/effect/: effect_test.go
legacy/engine/: engine.go
legacy/fixture/: attribute_group.go  dmx_writer.go  fixture.go  group.go  group_test.go  manager.go  manager_test.go
legacy/multicue/: cue_master.go  main.go
legacy/multicue/effect/: effect_test.go
legacy/oscproxy/: main.go
legacy/osctrigger/: osctrigger  playlists.go  update.go  view.go
legacy/preset/: position_preset.go
legacy/profile/: profile.go
legacy/rhythm/: metronome.go  metronome_snapshot.go  metronome_test.go
legacy/utils/: clamp.go  color.go  dimmer.go
logger/: logger.go
multicue/: cue_master.go  cues.go  effect.go  effect_test.go  main.go  model.go  update.go  view.go
multicue/effect/: effect.go  effect_test.go  oscillator.go  player.go
oldrust/: Cargo.toml
oldrust/src/: README.md  artnet.rs  main.rs
oldrust/v2/: Cargo.toml
oldrust/v2/src/: console.rs  effect.rs  fixture.rs  main.rs
oldrust/v2/ui/: package-lock.json
oldrust/v2/ui/public/: index.html  manifest.json
oldrust/v2/ui/src/: App.css  App.tsx
oldrust/v2/ui/src/components/: FixtureManager.tsx  PlaybackEngine.tsx  Visualizer.tsx
oldrust/v2/ui/src/hooks/: useAbletonLink.tsx
osctrigger/: main.go  model.go
profile/: profile.go
rhythm/: metronome.go  snapshot.go
rust/: Cargo.toml
rust/src/: artnet.rs  main.rs
scripts/: download_test_audio.sh
shows/: Guys40th.json  Jasons40th.json  halloween.json
src/: ableton_link.rs  artnet.rs  color.rs  console.rs  cue.rs  dmx.rs  effect.rs  fixture.rs  input_thread.rs  main.rs  midi.rs  rhythm.rs  scene.rs  ui.rs  visualization.rs
tests/: effects_tests.rs
unidump/: main.go
utils/: color.go  dimmer_test.go
v2/ui/: package.json
v2/ui/src/: index.css
v2/ui/src/components/: PatchPanel.tsx
v3/: .gitignore  Cargo.toml
v3/src/: main.rs
