[workspace]
members = ["crates/core", "crates/dj", "crates/fixtures", "crates/halo", "crates/push2", "crates/ui"]
default-members = ["crates/halo"]
resolver = "2"

# Optimize heavy computational crates even in dev mode for fast analysis
[profile.dev.package.halo-dj]
opt-level = 3

[profile.dev.package.rustfft]
opt-level = 3

[profile.dev.package.aubio-rs]
opt-level = 3

[profile.dev.package.symphonia]
opt-level = 3

[profile.dev.package.symphonia-core]
opt-level = 3

[profile.dev.package.symphonia-bundle-mp3]
opt-level = 3

[profile.dev.package.symphonia-bundle-flac]
opt-level = 3

[profile.dev.package.symphonia-format-wav]
opt-level = 3

[profile.dev.package.symphonia-codec-aac]
opt-level = 3

[profile.dev.package.rubato]
opt-level = 3
