[package]
name = "halo-core"
version = "0.1.0"
authors = ["Rob Morgan <robbym@gmail.com>"]
edition = "2021"

[dependencies]
halo-fixtures = { path = "../fixtures" }
rusty_link = "0.4.5"
artnet_protocol = "0.4.2"
anyhow = "1.0.100"
log = "0.4.28"
crossterm = "0.29.0"
midir = "0.10.2"
parking_lot = "0.12.4"
serde = { version = "1.0.226", features = ["derive"] }
serde_json = "1.0.145"
dirs = "6.0"
chrono = "0.4"
rodio = "0.21.1"
