[package]
name = "halo-core"
version = "0.1.0"
authors = ["Rob Morgan <robbym@gmail.com>"]
edition = "2021"

[dependencies]
halo-fixtures = { path = "../fixtures" }
rusty_link = "0.4.6"
artnet_protocol = "0.4.4"
anyhow = "1.0.100"
log = "0.4.29"
crossterm = "0.29.0"
midir = "0.10.3"
parking_lot = "0.12.5"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
dirs = "6.0"
chrono = "0.4"
rodio = "0.21.1"
cpal = "0.17"
tokio = { version = "1.49.0", features = ["full"] }
async-trait = "0.1"
symphonia = { version = "0.5", features = [
    "mp3",
    "aac",
    "flac",
    "wav",
    "vorbis",
] }

[dev-dependencies]
tempfile = "3.24"
