[package]
name = "halo-dj"
version = "0.1.0"
authors = ["Rob Morgan <robbym@gmail.com>"]
edition = "2021"
description = "DJ functionality for Halo lighting console"

[dependencies]
halo-core = { path = "../core" }
halo-fixtures = { path = "../fixtures" }

# Async runtime
tokio = { version = "1.48.0", features = ["full"] }
async-trait = "0.1"

# Audio playback and processing
rodio = "0.21.1"
cpal = "0.17"
symphonia = { version = "0.5", features = [
    "mp3",
    "wav",
    "aiff",
] }

# BPM and beat detection
rustfft = "6.2"

# Time-stretching for Master Tempo (SoundTouch WSOLA algorithm)
soundtouch = { version = "0.5", features = ["bundled"] }

# Database
rusqlite = { version = "0.32", features = ["bundled"] }

# MIDI (re-export from core for convenience)
midir = "0.10.3"

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"

# Utilities
anyhow = "1.0.100"
log = "0.4.29"
parking_lot = "0.12.5"
dirs = "6.0"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0"

[dev-dependencies]
env_logger = "0.11"
