# [lib]
# name = "halo"
# path = "src/lib.rs"
# bench = false

[[bin]]
name = "halo"
path = "src/main.rs"
bench = false

[package]
name = "halo"
description = "Realtime lighting console for live performances and precise automation."
version = "0.1.0"
authors = ["Rob Morgan <robbym@gmail.com>"]
edition = "2021"

[dependencies]
halo-core = { path = "../core" }
halo-ui = { path = "../ui" }
halo-fixtures = { path = "../fixtures" }
rusty_link = "0.4.4"
artnet_protocol = "0.4.2"
anyhow = "1.0.98"
log = "0.4.27"
midir = "0.10.1"
clap = { version = "4.5.37", features = ["derive"] }
crossterm = "0.29.0"
eframe = "0.31.1"
parking_lot = "0.12.3"
rfd = "0.15.3"
