# [lib]
# name = "halo"
# path = "src/lib.rs"
# bench = false

[[bin]]
name = "halo"
path = "src/main.rs"
bench = false

[package]
name = "halo"
description = "Realtime lighting console for live performances and precise automation."
version = "0.1.0"
authors = ["Rob Morgan <robbym@gmail.com>"]
edition = "2021"

[dependencies]
halo-core = { path = "../core" }
halo-ui = { path = "../ui" }
halo-fixtures = { path = "../fixtures" }
rusty_link = "0.4.5"
artnet_protocol = "0.4.2"
anyhow = "1.0.99"
log = "0.4.28"
midir = "0.10.2"
clap = { version = "4.5.47", features = ["derive"] }
crossterm = "0.29.0"
eframe = "0.32.3"
parking_lot = "0.12.4"
rfd = "0.15.4"
