[package]
name = "halo-ui"
version = "0.1.0"
authors = ["Rob Morgan <robbym@gmail.com>"]
edition = "2021"

[dependencies]
halo-core = { path = "../core" }
halo-fixtures = { path = "../fixtures" }
eframe = "0.32.0"
rand = "0.9.2"
chrono = "0.4.41"
parking_lot = "0.12.4"
egui_plot = "0.33.0"
rfd = "0.15.4"
tokio = { version = "1.47.1", features = ["full"] }
