[package]
name = "halo-ui"
version = "0.1.0"
authors = ["Rob Morgan <robbym@gmail.com>"]
edition = "2021"

[dependencies]
halo-core = { path = "../core" }
halo-fixtures = { path = "../fixtures" }
eframe = "0.33.3"
rand = "0.9.2"
chrono = "0.4.43"
parking_lot = "0.12.5"
egui_plot = "0.34.0"
rfd = "0.17.2"
tokio = { version = "1.49.0", features = ["full"] }
